--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CovidVaccineSlot</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Check real time covid vaccine slot availability and get notified when slot is available.">
+	<meta name="author" content="Kajal Kukreja">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon-120x120-precomposed.png" type="image/png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon-152x152-precomposed.png" type="image/png" />
+	<link rel="icon" href="assets/favicon.png" type="image/png">
+  <title>Check Covid Vaccination Slot Availability</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
