Some more changes for a working application

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<link rel="icon" href="assets/favicon.png" type="image/png">
   <title>Check Covid Vaccination Slot Availability</title>
   <base href="/">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
   <app-root></app-root>
